- mysql connection changed to pool connection - .env.example changed - username changed to a fix value - mysql2 installed instead of mysql

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-HOSTNAME = "localhost",
-USERNAME = "root",
-PASSWORD = "root",
-DATABSENAME = "csvtomysql"
+HOSTNAME="localhost",
+PORT=3306
+USERNAME="root",
+PASSWORD="root",
+DATABSENAME="csvtomysql"
