--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "csvtojson": "^2.0.10",
-    "mysql": "^2.18.1"
+    "dotenv": "^10.0.0",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3-rc.0"
   }
 }
